--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Dark
 Type: Package
-Title: Fits the Mahroo Lamb and Pugh (MLP) model of dark adaptaion to data
+Title: Fits the Mahroo Lamb and Pugh (MLP) model of dark adaptation to data
 Version: 1.0
 Date: 2015-04-17
 Author: Jeremiah MF Kelly 
