--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,5 +5,5 @@ Version: 1.0
 Date: 2015-04-17
 Author: Jeremiah MF Kelly 
 Maintainer: Jeremiah MF Kelly <emkayoh@mac.com>
-Description: Dark adaptation is the recovery of visual sensitivity in a dark environemnt, the data can be described by a physiological model. The functions in this package take that data and find the parameters of the model that 'best fit' the data. 
-License:  GPL-2,   GPL-3
+Description: A series of functions to analyse dark adaptation data
+License:  GPL-3
