--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Dark
 Type: Package
-Title: Analysis of Dark Adaptation Data
+Title: The Analysis of Dark Adaptation Data
 Version: 0.9.0
 Date: 2015-04-17
 Author: Jeremiah MF Kelly 
