--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,4 +7,4 @@ Author: Jeremiah MF Kelly
 Maintainer: Jeremiah MF Kelly <emkayoh@mac.com>
 Description: A series of functions to analyse dark adaptation data
 License:  GPL-3
-Examples: ~~ simple examples
+Examples: tmp<- TestData(0:20)
