--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,22 @@
 Package: Dark
 Type: Package
 Title: The Analysis of Dark Adaptation Data
-Version: 0.9.0
+Version: 0.9.2
 Date: 2015-04-17
-Author: Jeremiah MF Kelly 
-Maintainer: Jeremiah MF Kelly <emkayoh@mac.com>
-Description: A series of functions to analyse dark adaptation data
+Author: Dr Jeremiah MF Kelly 
+Maintainer: Dr Jeremiah MF Kelly <emkayoh@mac.com>
+Description: The recovery of visual sensitivity in a dark environment is known as Dark 
+ adaptation.  In a clinical or research setting the recovery is typically 
+ measured after a dazzling flash of light and can be described by the Mahroo, 
+ Lamb and Pugh (MLP) model of dark adaptation. The functions in this package 
+ take dark adaptation data and use nonlinear regression to find the parameters  
+ of the model that 'best' describe the data. They do this by firstly, 
+ generating rapid initial objective estimates of data adaptation parameters, 
+ then a multi-start algorithm is used to reduce the possibility of a local 
+ minimum. There is also a bootstrap method to calculate parameter confidence 
+ intervals. The functions rely upon a 'dark' list or object. This object is 
+ created as the first step in the workflow and parts of the object are 
+ updated as it is processed.
 License:  GPL-3
-Examples: tmp<- TestData(0:20)
+URL: https://github.com/emkayoh/Dark
+BugReports: https://github.com/emkayoh/Dark/issues
