NIHR website added

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,5 +18,5 @@ Description: The recovery of visual sensitivity in a dark environment is known a
  created as the first step in the workflow and parts of the object are 
  updated as it is processed.
 License:  GPL-3
-URL: https://github.com/emkayoh/Dark
+URL: https://github.com/emkayoh/Dark, www.nihr.ac.uk
 BugReports: https://github.com/emkayoh/Dark/issues
