--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,5 +21,5 @@ License:  GPL-3
 LazyData: yes
 URL: https://github.com/emkayoh/Dark, http://www.nihr.ac.uk
 BugReports: https://github.com/emkayoh/Dark/issues
-Suggests: knitr, rmarkdown
+Suggests: knitr, rmarkdown,testthat
 VignetteBuilder: knitr
