--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: The Analysis of Dark Adaptation Data
 Version: 0.9.6
 Date: 2015-06-12
-Author: Dr Jeremiah MF Kelly 
-Maintainer: Dr Jeremiah MF Kelly <emkayoh@mac.com>
+Author: Jeremiah MF Kelly 
+Maintainer: Jeremiah MF Kelly <emkayoh@mac.com>
 Description: The recovery of visual sensitivity in a dark environment is known as dark 
  adaptation.  In a clinical or research setting the recovery is typically 
  measured after a dazzling flash of light and can be described by the Mahroo, 
