--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,23 +3,25 @@ Type: Package
 Title: The Analysis of Dark Adaptation Data
 Version: 0.9.6
 Date: 2015-06-12
-Author: Jeremiah MF Kelly 
+Author: Jeremiah MF Kelly
 Maintainer: Jeremiah MF Kelly <emkayoh@mac.com>
-Description: The recovery of visual sensitivity in a dark environment is known as dark 
- adaptation.  In a clinical or research setting the recovery is typically 
- measured after a dazzling flash of light and can be described by the Mahroo, 
- Lamb and Pugh (MLP) model of dark adaptation. The functions in this package 
- take dark adaptation data and use nonlinear regression to find the parameters  
- of the model that 'best' describe the data. They do this by firstly, 
- generating rapid initial objective estimates of data adaptation parameters, 
- then a multi-start algorithm is used to reduce the possibility of a local 
- minimum. There is also a bootstrap method to calculate parameter confidence 
- intervals. The functions rely upon a 'dark' list or object. This object is 
- created as the first step in the workflow and parts of the object are 
- updated as it is processed.
-License:  GPL-3
+Description: The recovery of visual sensitivity in a dark environment is known
+    as dark adaptation. In a clinical or research setting the recovery is typically
+    measured after a dazzling flash of light and can be described by the Mahroo,
+    Lamb and Pugh (MLP) model of dark adaptation. The functions in this package take
+    dark adaptation data and use nonlinear regression to find the parameters of the
+    model that 'best' describe the data. They do this by firstly, generating rapid
+    initial objective estimates of data adaptation parameters, then a multi-start
+    algorithm is used to reduce the possibility of a local minimum. There is also a
+    bootstrap method to calculate parameter confidence intervals. The functions rely
+    upon a 'dark' list or object. This object is created as the first step in the
+    workflow and parts of the object are updated as it is processed.
+License: GPL-3
 LazyData: yes
 URL: https://github.com/emkayoh/Dark, http://www.nihr.ac.uk
 BugReports: https://github.com/emkayoh/Dark/issues
-Suggests: knitr, rmarkdown,testthat
+Suggests:
+    knitr,
+    rmarkdown,testthat
 VignetteBuilder: knitr
+RoxygenNote: 5.0.1
