--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,4 +25,5 @@ Suggests:
     rmarkdown,testthat
 Imports: stats, grDevices, graphics, utils
 VignetteBuilder: knitr
-RoxygenNote: 5.0.1
+RoxygenNote: 7.3.1
+Encoding: UTF-8
