--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,12 @@ Package: Dark
 Type: Package
 Title: The Analysis of Dark Adaptation Data
 Version: 0.9.9
-Date: 2025-01014
+Date: 2025-01-14
 Author: Jeremiah MF Kelly
-Maintainer: Jeremiah MF Kelly <emkayoh@mac.com>
+Authors@R: person(given = c("Jeremiah", "MF"),
+                    family = "Kelly",
+                    role = c("aut", "cre", "cph"),
+                    email = "emkayoh@mac.com")
 Description: The recovery of visual sensitivity in a dark environment is known
     as dark adaptation. In a clinical or research setting the recovery is typically
     measured after a dazzling flash of light and can be described by the Mahroo,
@@ -18,7 +21,7 @@ Description: The recovery of visual sensitivity in a dark environment is known
     workflow and parts of the object are updated as it is processed.
 License: GPL-3
 LazyData: yes
-URL: https://github.com/emkayoh/Dark, http://www.nihr.ac.uk
+URL: https://github.com/emkayoh/Dark
 BugReports: https://github.com/emkayoh/Dark/issues
 Suggests:
     knitr,
