--- a/..Rcheck/Dark/DESCRIPTION
+++ b/..Rcheck/Dark/DESCRIPTION
@@ -3,7 +3,10 @@ Type: Package
 Title: The Analysis of Dark Adaptation Data
 Version: 0.9.9
 Date: 2025-01-14
-Author: Jeremiah MF Kelly
+Authors@R: person(given = c("Jeremiah", "MF"),
+                    family = "Kelly",
+                    role = c("aut", "cre", "cph"),
+                    email = "emkayoh@mac.com")
 Maintainer: Jeremiah MF Kelly <emkayoh@mac.com>
 Description: The recovery of visual sensitivity in a dark environment is known
     as dark adaptation. In a clinical or research setting the recovery is typically
