win_check_devel changes made to Author

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,9 +23,11 @@ LazyData: yes
 URL: https://github.com/emkayoh/Dark
 BugReports: https://github.com/emkayoh/Dark/issues
 Suggests:
+    spelling,
     knitr,
     rmarkdown,testthat
 Imports: stats, grDevices, graphics, utils
 VignetteBuilder: knitr
 RoxygenNote: 7.3.1
 Encoding: UTF-8
+Language: en-US
